# MeroSign

./: README.md  package-lock.json  vercel.json
.github/workflows/: deploy-icp-canister.yml  test-merobox.yml
app/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src/api/: agreementService.ts  clientApi.ts  documentService.ts
app/src/api/dataSource/: ClientApiDataSource.ts  nodeApiDataSource.ts
app/src/api/icp/: backendActor.ts  backendService.ts  index.ts  types.ts  utils.ts
app/src/components/: AuditTrail.tsx  CalimeroConnectionRequired.tsx  ConsentModal.tsx  InvitationHandlerPopup.tsx  LegalChatbot.tsx  MobileHeader.tsx  PDFViewer.tsx  Sidebar.tsx  SignaturePad.tsx
app/src/constants/: config.ts
app/src/contexts/: ThemeContext.tsx
app/src/lib/: utils.ts
app/src/pages/agreement/: index.tsx
app/src/pages/dashboard/: index.tsx
app/src/pages/signatures/: index.tsx
app/src/services/: embeddingService.ts  pdfService.ts
app/src/theme/: index.ts
app/src/utils/: invitation.ts
canisters/: .gitignore  CI-CD-SETUP.md  Cargo.toml  README.md  dfx.json  release.sh  test-deployment.sh
canisters/dao_agreement/: Cargo.toml  lib.rs
canisters/llm_chatbot/: cargo.toml  lib.rs  llm_chatbot.did
canisters/merodocs_registry/: Cargo.toml  lib.rs
logic/: Cargo.toml  build.rs
logic/res/: mero_docs.wasm  mero_sign.wasm
logic/src/: lib.rs
workflows/: bootstrap.yml  e2e-test.yml  test.yml
workflows/test-files/: sample-agreement.txt
(+16 files in other folders)
